--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=traffic
-# spring.datasource.password=admin
-# spring.datasource.username=admin
-spring.datasource.password=Qplim@3758
-spring.datasource.username=root
+spring.datasource.password=admin
+spring.datasource.username=admin
+# spring.datasource.password=Qplim@3758
+# spring.datasource.username=root
 spring.datasource.url=jdbc:mysql://localhost/traffic?createDatabaseIfNotExists=true&serverTimezone=UTC
 # spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
